# wordninja

./: CMakeLists.txt  README.md
include/: wordninja.h
src/: wordninja.cpp
test/: test.cpp
