CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(wordninja)
SET(INCLUDE_DIRS ./include)
AUX_SOURCE_DIRECTORY(./src  SOURCES)
AUX_SOURCE_DIRECTORY(./test  SOURCES)


IF(UNIX OR APPLE)
    SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
ENDIF()


INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
ADD_EXECUTABLE(wordninja ${SOURCES})
